fix: Added code to convert application/json to multiform, added github REST and Unix connection support
